# transcript-analyzer

./: .gitignore  README.md  config.example.toml  pyproject.toml
scripts/: categorize.py  install_launchd.sh  run_sync.py  synthesize.py
src/transcript_analyzer/: __init__.py  calendar_feed.py  config.py  db.py  models.py  rag.py  sync.py
src/transcript_analyzer/connectors/: granola.py  pocket.py  pocket_api.py
src/transcript_analyzer/obsidian/: writer.py
src/transcript_analyzer/pipeline/: categorize.py  indexer.py  insights.py  llm.py  organize.py  quality.py  synthesize.py
src/transcript_analyzer/web/: app.py  synth_reader.py
src/transcript_analyzer/web/static/: style.css
src/transcript_analyzer/web/templates/: _ask_panel.html  base.html  browse.html  category.html  chat.html  commitments.html  digest.html  home.html  people.html  person.html  prep.html  studies.html  study.html  transcript.html
tests/: conftest.py  test_category_rollups.py  test_citation_gate.py  test_cost_guard.py  test_granola_attendees.py  test_indexer.py  test_managed_regions.py  test_people_and_synthesis.py  test_quality.py  test_rag_scope.py  test_synth_reader.py
