[project]
name = "transcript-analyzer"
version = "0.1.0"
description = "Ingest Granola + Pocket AI transcripts, extract insights with local Ollama, store in Obsidian, browse + chat via a local dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-frontmatter>=1.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "python-slugify>=8.0",
    "tomli>=2.0; python_version < '3.11'",
    "tenacity>=8.2",
]

[project.scripts]
transcript-sync = "transcript_analyzer.sync:main"
transcript-web = "transcript_analyzer.web.app:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
