[project]
name = "transcript-analyzer"
version = "0.2.0"
description = "Ingest Granola + Pocket AI transcripts, synthesize with the Claude API (digests, dossiers, study rollups, meeting prep), store in Obsidian, browse + chat via a local dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.66",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-frontmatter>=1.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-slugify>=8.0",
    "icalendar>=5.0",
    "recurring-ical-events>=2.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
transcript-sync = "transcript_analyzer.sync:main"
transcript-web = "transcript_analyzer.web.app:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
